set loading behaviour to use jupyterhub path by default, notes on building corpora commented out

--- a/DIGI405 - Lab 1.1 - Frequency.ipynb
+++ b/DIGI405 - Lab 1.1 - Frequency.ipynb
@@ -49,8 +49,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_path = f'{os.environ.get(\"HOME\")}/data/' # path to the source data from which the corpus will be created\n",
-    "save_path = f'{os.environ.get(\"HOME\")}/data/conc-test-corpora/' # path to the directory where the corpus will be saved"
+    "source_path = f'/srv/source-data/' # path to the source data from which the corpus will be created\n",
+    "save_path = f'/srv/corpora/' # path to the directory where corpora are stored"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52bbefa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = Corpus().load(f'{save_path}introduce-yourself.corpus') # load the corpus\n",
+    "reference_corpus = Corpus().load(f'{save_path}brown.corpus') # load the Brown corpus for comparisons later in this notebook"
    ]
   },
   {
@@ -60,17 +71,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if the corpus does not exist, build it from the source files\n",
-    "try:\n",
-    "    corpus = Corpus().load(f'{save_path}introduce-yourself.corpus')\n",
-    "except FileNotFoundError:\n",
-    "    corpus = Corpus(name = 'Introduce Yourself', description = 'DIGI405 class introduction corpus').build_from_files(f'{source_path}introduce_yourself_corpus_25S1.zip', f'{save_path}/')\n",
-    "\n",
-    "# if the corpus does not exist, build it from the source files\n",
-    "try:\n",
-    "    reference_corpus = Corpus().load(f'{save_path}brown.corpus')\n",
-    "except FileNotFoundError:\n",
-    "    reference_corpus = Corpus(name = 'Brown', description = '').build_from_csv(f'{source_path}brown.csv.gz', f'{save_path}/')"
+    "# # if you are running the code on your own machine, adjust the corpus_source_path below to point to the zip with the source files\n",
+    "# # uncomment the remaining lines of this cell to create the corpus from the source files (or load if it already exists)\n",
+    "# corpus_source_path = f'{source_path}introduce_yourself_corpus.zip'\n",
+    "# try:\n",
+    "#     corpus = Corpus().load(f'{save_path}introduce-yourself.corpus')\n",
+    "# except FileNotFoundError:\n",
+    "#     corpus = Corpus(name = 'Introduce Yourself', description = 'DIGI405 class introduction corpus').build_from_files(corpus_source_path, f'{save_path}/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e6f9ad5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # if you are running the code on your own machine, adjust the corpus_source_path below to point to the zip with the source files\n",
+    "# # uncomment the remaining lines of this cell to create the corpus from the source files (or load if it already exists)\n",
+    "# get_nltk_corpus_sources(source_path) # download brown, reuters and gutenberg corpora via NLTK\n",
+    "# try:\n",
+    "#     reference_corpus = Corpus().load(f'{save_path}brown.corpus')\n",
+    "# except FileNotFoundError:\n",
+    "#     reference_corpus = Corpus(name = 'Brown', description = '').build_from_csv(f'{source_path}brown.csv.gz', f'{save_path}/')"
    ]
   },
   {
@@ -444,16 +467,6 @@
    "source": [
     "restrict_tokens = ['school', 'teaching', 'learning', 'knowledge', 'student', 'training', 'teacher', 'lecturer', 'academic', 'university', 'research', 'skill', 'study', 'educational', 'skills', 'students', 'classroom', 'class']\n",
     "conc.frequencies(exclude_punctuation = True, restrict_tokens = restrict_tokens, page_size = 10, show_document_frequency = True, normalize_by=1000).display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc97b445",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conc.ngram_frequencies"
    ]
   },
   {
