--- a/DIGI405 - Lab 1.2 - Concordancing.ipynb
+++ b/DIGI405 - Lab 1.2 - Concordancing.ipynb
@@ -48,8 +48,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_path = f'{os.environ.get(\"HOME\")}/data/' # path to the source data from which the corpus will be created\n",
-    "save_path = f'{os.environ.get(\"HOME\")}/data/conc-test-corpora/' # path to the directory where the corpus will be saved"
+    "source_path = f'/srv/source-data/' # path to the source data from which the corpus will be created\n",
+    "save_path = f'/srv/corpora/' # path to the directory where corpora are stored"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0b77182",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = Corpus().load(f'{save_path}introduce-yourself.corpus')"
    ]
   },
   {
@@ -59,11 +69,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if the corpus does not exist, build it from the source files\n",
-    "try:\n",
-    "    corpus = Corpus().load(f'{save_path}introduce-yourself.corpus')\n",
-    "except FileNotFoundError:\n",
-    "    corpus = Corpus(name = 'Introduce Yourself', description = 'DIGI405 class introduction corpus').build_from_files(f'{source_path}introduce_yourself_corpus_25S1.zip', f'{save_path}/')"
+    "# # if you are running the code on your own machine, adjust the corpus_source_path below to point to the zip with the source files\n",
+    "# # uncomment the remaining lines of this cell to create the corpus from the source files (or load if it already exists)\n",
+    "# corpus_source_path = f'{source_path}introduce_yourself_corpus.zip'\n",
+    "# try:\n",
+    "#     corpus = Corpus().load(f'{save_path}introduce-yourself.corpus')\n",
+    "# except FileNotFoundError:\n",
+    "#     corpus = Corpus(name = 'Introduce Yourself', description = 'DIGI405 class introduction corpus').build_from_files(corpus_source_path, f'{save_path}/')"
    ]
   },
   {
@@ -340,25 +352,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77c6112f",
-   "metadata": {},
-   "source": [
-    "## Task 6: Using wildcards\n",
-    "\n",
-    "TODO: \n",
-    "\n",
-    "Concordances only show you specific word forms, but you can use the ‘*’ wildcard to search multiple word forms at once. Try, for example:\n",
-    "- interest*\n",
-    "- excit*\n",
-    "- *ing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "1c1b9fee",
    "metadata": {},
    "source": [
-    "## Task 7: Wrapping up"
+    "## Task 6: Wrapping up"
    ]
   },
   {
