--- a/DIGI405 - Lab 2.1 - Collocations.ipynb
+++ b/DIGI405 - Lab 2.1 - Collocations.ipynb
@@ -56,8 +56,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_path = f'{os.environ.get(\"HOME\")}/data/' # path to the source data from which the corpus will be created\n",
-    "save_path = f'{os.environ.get(\"HOME\")}/data/conc-test-corpora/' # path to the directory where the corpus will be saved"
+    "source_path = f'/srv/source-data/' # path to the source data from which the corpus will be created\n",
+    "save_path = f'/srv/corpora/' # path to the directory where corpora are stored"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0c8627b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = Corpus().load(f'{save_path}quake-stories-v2.corpus')"
    ]
   },
   {
@@ -67,10 +77,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    corpus = Corpus().load(f'{save_path}quake-stories-v2.corpus')\n",
-    "except FileNotFoundError:\n",
-    "    corpus = Corpus(name = 'Quake Stories v2', description = 'This is a corpus based on stories from the http://www.quakestories.govt.nz/ website established by Manatū Taonga / Ministry for Culture and Heritage in 2011. QuakeStories was a place for the public to share stories of these and subsequent New Zealand earthquakes. The site was licensed under Creative Commons BY-NC-SA (https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en). This data-set, as a re-representation of the stories, is also released under BY-NC-SA. Please be aware that some stories may relate to people who were killed or injured in the Canterbury earthquakes. Treat the material with respect. ').build_from_files(f'{source_path}qs-v2', f'{save_path}/')"
+    "# # if you are running the code on your own machine, unzip the source files - adjust the corpus_source_path below to point to the directory with the source files\n",
+    "# # uncomment the remaining lines of this cell to create the corpus from the source files (or load if it already exists)\n",
+    "# corpus_source_path = f'{source_path}qs-v2'\n",
+    "# try:\n",
+    "#     corpus = Corpus().load(f'{save_path}quake-stories-v2.corpus')\n",
+    "# except FileNotFoundError:\n",
+    "#     corpus = Corpus(name = 'Quake Stories v2', description = 'This is a corpus based on stories from the http://www.quakestories.govt.nz/ website established by Manatū Taonga / Ministry for Culture and Heritage in 2011. QuakeStories was a place for the public to share stories of these and subsequent New Zealand earthquakes. The site was licensed under Creative Commons BY-NC-SA (https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en). This data-set, as a re-representation of the stories, is also released under BY-NC-SA. Please be aware that some stories may relate to people who were killed or injured in the Canterbury earthquakes. Treat the material with respect. ').build_from_files(corpus_source_path, f'{save_path}/')"
    ]
   },
   {
