--- a/DIGI405 - Lab 2.3 - Keywords.ipynb
+++ b/DIGI405 - Lab 2.3 - Keywords.ipynb
@@ -57,8 +57,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_path = f'{os.environ.get(\"HOME\")}/data/' # path to the source data from which the corpus will be created\n",
-    "save_path = f'{os.environ.get(\"HOME\")}/data/conc-test-corpora/' # path to the directory where the corpus will be saved"
+    "source_path = f'/srv/source-data/' # path to the source data from which the corpus will be created\n",
+    "save_path = f'/srv/corpora/' # path to the directory where corpora are stored"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a03cc26f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = Corpus().load(f'{save_path}quake-stories-v2.corpus')"
    ]
   },
   {
@@ -68,10 +78,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    corpus = Corpus().load(f'{save_path}quake-stories-v2.corpus')\n",
-    "except FileNotFoundError:\n",
-    "    corpus = Corpus(name = 'Quake Stories v2', description = 'This is a corpus based on stories from the http://www.quakestories.govt.nz/ website established by Manatū Taonga / Ministry for Culture and Heritage in 2011. QuakeStories was a place for the public to share stories of these and subsequent New Zealand earthquakes. The site was licensed under Creative Commons BY-NC-SA (https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en). This data-set, as a re-representation of the stories, is also released under BY-NC-SA. Please be aware that some stories may relate to people who were killed or injured in the Canterbury earthquakes. Treat the material with respect. ').build_from_files(f'{source_path}qs-v2', f'{save_path}/')"
+    "# # if you are running the code on your own machine, unzip the source files - adjust the corpus_source_path below to point to the directory with the source files\n",
+    "# # uncomment the remaining lines of this cell to create the corpus from the source files (or load if it already exists)\n",
+    "# corpus_source_path = f'{source_path}qs-v2'\n",
+    "# try:\n",
+    "#     corpus = Corpus().load(f'{save_path}quake-stories-v2.corpus')\n",
+    "# except FileNotFoundError:\n",
+    "#     corpus = Corpus(name = 'Quake Stories v2', description = 'This is a corpus based on stories from the http://www.quakestories.govt.nz/ website established by Manatū Taonga / Ministry for Culture and Heritage in 2011. QuakeStories was a place for the public to share stories of these and subsequent New Zealand earthquakes. The site was licensed under Creative Commons BY-NC-SA (https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en). This data-set, as a re-representation of the stories, is also released under BY-NC-SA. Please be aware that some stories may relate to people who were killed or injured in the Canterbury earthquakes. Treat the material with respect. ').build_from_files(corpus_source_path, f'{save_path}/')"
    ]
   },
   {
@@ -136,8 +149,9 @@
    "outputs": [],
    "source": [
     "reference_corpus = ListCorpus().load(f'{save_path}bnc.listcorpus') # loading a Conc list corpus as a reference corpus\n",
-    "# if you had the full BNC, you could use this instead:\n",
-    "# reference_corpus = Corpus().load(f'{save_path}bnc.corpus') # loadding a Conc corpus as a reference corpus"
+    "# # if you had the full BNC, you could use this instead:\n",
+    "# reference_corpus = Corpus().load(f'{save_path}bnc.corpus') # loadding a Conc corpus as a reference corpus\n",
+    "# # See the Conc documentation site for information on creating a list corpus from the BNC https://geoffford.nz/conc/"
    ]
   },
   {
@@ -258,14 +272,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "24718a82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labour_corpus = Corpus().load(f'{save_path}labour-nz-first-coalition.corpus')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a15dfd8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    labour_corpus = Corpus().load(f'{save_path}labour-nz-first-coalition.corpus')\n",
-    "except FileNotFoundError:\n",
-    "    labour_corpus = Corpus(name = 'Labour-NZ First Coalition', description = 'Labour-NZ First Coalition (2017-2019) subcorpus, part of the Beehive (2014-2019) corpus compiled by Dr Geoff Ford. The corpus consists of speeches by New Zealand government ministers scraped from https://www.beehive.govt.nz/.').build_from_files(f'{source_path}beehive-speeches-2014-2019/2017-2020 Labour-New Zealand First Coalition', f'{save_path}', standardize_word_token_punctuation_characters = True)"
+    "# # if you are running the code on your own machine, unzip the source files - adjust the corpus_source_path below to point to the directory with the source files\n",
+    "# # uncomment the remaining lines of this cell to create the corpus from the source files (or load if it already exists)\n",
+    "# corpus_source_path = f'{source_path}beehive-speeches-2014-2019/2017-2020 Labour-New Zealand First Coalition'\n",
+    "# try:\n",
+    "#     labour_corpus = Corpus().load(f'{save_path}labour-nz-first-coalition.corpus')\n",
+    "# except FileNotFoundError:\n",
+    "#     labour_corpus = Corpus(name = 'Labour-NZ First Coalition', description = 'Labour-NZ First Coalition (2017-2019) subcorpus, part of the Beehive (2014-2019) corpus compiled by Dr Geoff Ford. The corpus consists of speeches by New Zealand government ministers scraped from https://www.beehive.govt.nz/.').build_from_files(corpus_source_path, f'{save_path}', standardize_word_token_punctuation_characters = True)"
    ]
   },
   {
@@ -281,14 +308,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7d6cadcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "national_corpus = Corpus().load(f'{save_path}national-led.corpus')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "05e47fbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    national_corpus = Corpus().load(f'{save_path}national-led.corpus')\n",
-    "except FileNotFoundError:\n",
-    "    national_corpus = Corpus(name = 'National-led', description = 'National-led government (during the period 2014-2017) subcorpus, part of the Beehive (2014-2019) corpus compiled by Dr Geoff Ford. The corpus consists of speeches by New Zealand government ministers scraped from https://www.beehive.govt.nz/.').build_from_files(f'{source_path}beehive-speeches-2014-2019/2014-2017 National-led', f'{save_path}', standardize_word_token_punctuation_characters = True)"
+    "# # if you are running the code on your own machine, unzip the source files - adjust the corpus_source_path below to point to the directory with the source files\n",
+    "# # uncomment the remaining lines of this cell to create the corpus from the source files (or load if it already exists)\n",
+    "# corpus_source_path = f'{source_path}beehive-speeches-2014-2019/2014-2017 National-led'\n",
+    "# try:\n",
+    "#     national_corpus = Corpus().load(f'{save_path}national-led.corpus')\n",
+    "# except FileNotFoundError:\n",
+    "#     national_corpus = Corpus(name = 'National-led', description = 'National-led government (during the period 2014-2017) subcorpus, part of the Beehive (2014-2019) corpus compiled by Dr Geoff Ford. The corpus consists of speeches by New Zealand government ministers scraped from https://www.beehive.govt.nz/.').build_from_files(corpus_source_path, f'{save_path}', standardize_word_token_punctuation_characters = True)"
    ]
   },
   {
