updating for revised dataset, adding cell to allow download of source data

--- a/DIGI405 - Lab 1.1 - Frequency.ipynb
+++ b/DIGI405 - Lab 1.1 - Frequency.ipynb
@@ -39,6 +39,7 @@
     "from conc.corpus import Corpus\n",
     "from conc.conc import Conc\n",
     "from conc.core import get_stop_words\n",
+    "import shutil\n",
     "import os"
    ]
   },
@@ -71,13 +72,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # if you are running the code on your own machine, adjust the corpus_source_path below to point to the zip with the source files\n",
-    "# # uncomment the remaining lines of this cell to create the corpus from the source files (or load if it already exists)\n",
+    "# if you are running the code on your own machine, adjust the corpus_source_path below to point to the zip with the source files\n",
+    "# uncomment the remaining lines of this cell to create the corpus from the source files (or load if it already exists)\n",
     "# corpus_source_path = f'{source_path}introduce_yourself_corpus.zip'\n",
     "# try:\n",
     "#     corpus = Corpus().load(f'{save_path}introduce-yourself.corpus')\n",
     "# except FileNotFoundError:\n",
-    "#     corpus = Corpus(name = 'Introduce Yourself', description = 'DIGI405 class introduction corpus').build_from_files(corpus_source_path, f'{save_path}/')"
+    "#     corpus = Corpus(name = 'Introduce Yourself', description = 'The \"Introduce Yourself\" corpus is based on responses to the Introduce Yourself task from previous semesters of DIGI405. Names have been replaced with NAMEREMOVED.').build_from_files(corpus_source_path, f'{save_path}/')"
    ]
   },
   {
@@ -134,6 +135,26 @@
    "outputs": [],
    "source": [
     "stop_words = get_stop_words(save_path = save_path) # load spaCy stop words "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bef7ca0",
+   "metadata": {},
+   "source": [
+    "If you want to examine the contents of the source data for the Introduce Yourself corpus, uncomment the following cell and run it. This will copy it into your current working directory. You can download it to your local computer by right clicking on the file in file viewer and clicking 'Download'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "751926c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# source_file = '/srv/source-data/introduce_yourself_corpus.zip' # path to the file containing the Introduce Yourself texts\n",
+    "# destination = os.path.join(os.getcwd(), os.path.basename(source_file))\n",
+    "# shutil.copy(source_file, destination)"
    ]
   },
   {
@@ -197,7 +218,7 @@
    "id": "a3e53f34",
    "metadata": {},
    "source": [
-    "We are often not interested in punctuation tokens. The table below filters those out. "
+    "The code below adds the `exclude_punctuation` parameter to filter out punctuation tokens. Our interest for this analysis is word tokens.  "
    ]
   },
   {
@@ -304,7 +325,7 @@
    "id": "d3dcb119",
    "metadata": {},
    "source": [
-    "One problem with making sense of the frequency table is that it lacks context. We probably don't have a good sense of what tokens are typically frequent or not. We almost certainly don't have a good sense of what frequency data means without comparison.  \n",
+    "One problem with making sense of the frequency table is that it lacks context. We probably don't have a good sense of which tokens are typically frequent or not. We almost certainly don't have a good sense of what frequency data means without comparison.  \n",
     "\n",
     "Let's compare the Introduce yourself frequency table with the frequency table of a general sample of English. Our *reference corpus* is the Brown Corpus, which includes approximately 1 million words of American English text from the 1960s. We might question whether the kind of English and the dates are relevant, these are good questions to ask. It is useful for our comparison here, because it contains a wide range of text types. First, here is a summary of the corpus. You can compare this to the summary of the Introduce yourself corpus at the top of the notebook."
    ]
@@ -344,12 +365,12 @@
    "source": [
     "Compare the two frequency tables. You will notice the most frequent tokens are different for each corpus. While comparing ranks gives you some information about the relative frequency of tokens within the corpus, the normalized frequency is very helpful quantitative information about how frequencies in the two corpora compare. With the normalized frequency you can use quantitative information to express differences between the corpora. For example:\n",
     "\n",
-    "The function word \"my\" appears appears 20.4 times more frequently per 1000 tokens in the Introduce yourself corpus than in the Brown corpus.  \n",
+    "The function word \"my\" appears appears 21.9 times more frequently per 1000 tokens in the Introduce yourself corpus than in the Brown corpus.  \n",
     "\n",
     "Note: this statement is based on the following information:  \n",
-    "* Normalized frequency of \"my\" in Introduce yourself corpus: 25.3  \n",
+    "* Normalized frequency of \"my\" in Introduce yourself corpus: 27.2  \n",
     "* Normalized frequency of \"my\" in Brown corpus: 1.24  \n",
-    "* Ratio of normalized frequencies: 25.3 / 1.24 = 20.4  \n",
+    "* Ratio of normalized frequencies: 27.2 / 1.24 = 21.9  \n",
     "\n",
     "Create a markdown cell and make notes on key differences. Be specific and use the quantitative information in the table to support your observations. To aide you with this you can use a feature of the reporting library to restrict the results to specific tokens. For example, to restrict the results shown to the pronouns \"I\" and \"my\" you would do this:\n",
     "  "
@@ -394,9 +415,9 @@
     "\n",
     "Words that do not appear in the corpus are not included in the frequency table.  \n",
     "\n",
-    "Notice that the tokens \"languages\" and \"language\" have similar frequencies, but \"languages\" appears in only one document, while \"language\" appears in multiple. These are very different patterns of use. \n",
+    "Notice the related tokens \"languages\" and \"language\". We can express differences between the use of these tokens in terms of their document frequencies. The token \"languages\" appears in 11 of the 96 document (11%), while \"language\" appears in 18 of 96 documents (19%).  \n",
     "\n",
-    "We are dealing with a very small corpus in this instance that was derived from a specific prompt. With such a small corpus, the choices made by a single author are significant. If we are interested in making general claims about features of texts in the Introduce yourself corpus, we may treat frequent tokens that appear in a single document as outliers or exceptions. "
+    "Note: We are dealing with a very small corpus in this instance that was derived from a specific prompt. With such a small corpus, the choices made by single authors can be  significant. If we are interested in making general claims about features of texts in the Introduce yourself corpus, we may treat frequent tokens that appear in single (or very few) documents as outliers or exceptions."
    ]
   },
   {
@@ -415,7 +436,7 @@
    "id": "860f2d15",
    "metadata": {},
    "source": [
-    "If we were working with a larger corpus specific documents are unlikely to account for high frequency tokens, however the distribution of tokens is still relevant. For example, 'data' is the most frequent of the tokens in our list in both the Introduce yourself and Brown corpora (see below). However, \"data\" is mentioned 167 times (19.09 times per 1000 word tokens) in the Introduce yourself corpus and in almost all documents (25 out of 28 texts). In the Brown corpus the token 'data' is mentioned 173 times (0.18 times per 1000 word tokens) and only appears in 10% of documents. This is a very different pattern. The use of \"data\" in the Brown corpus would still be interesting to analyse, but it is helpful to understand that we would be analyzing a token that is relatively common in a subset of documents. "
+    "If we are working with a larger corpus specific documents are unlikely to account for high frequency tokens, however the distribution of tokens is still relevant. For example, 'data' is the most frequent of the tokens in our list in both the Introduce yourself and Brown corpora (see below). However, \"data\" is mentioned 167 times (16.84 times per 1000 word tokens) in the Introduce yourself corpus and in almost all documents (92 out of 96 texts). In the Brown corpus the token 'data' is mentioned 173 times (0.18 times per 1000 word tokens) and only appears in 10% of documents. This is a very different pattern. The use of \"data\" in the Brown corpus would still be interesting to analyse, but it is helpful to understand that we would be analyzing a token that is relatively common in a subset of documents. "
    ]
   },
   {
@@ -451,9 +472,9 @@
    "source": [
     "Below is a frequency table of mentions of education-related words in the Introduce yourself corpus. One problem to be aware of when analyzing frequency tables and other high-level quantitative views of a corpus is that we are losing the context of the tokens. We need to be careful to avoid making assumptions about what specific tokens mean or why they are frequent or infrequent. \n",
     "\n",
-    "In this example, given we are interested in education-related terms we might assume that \"learning\" is frequent because students are talking about their learning or their attitude to learning. However, this would be missing a key pattern in the data. Around one third of mentions of the token \"learning\" in this corpus relate to \"machine learning\" or \"deep learning\". Perhaps you've guessed this, especially if you wrote about \"machine learning\", but think of someone analyzing this corpus without that knowledge. With the frequency table alone we cannot make strong claims about the use of \"learning\". \n",
+    "In this example, given we are interested in education-related terms we might assume that \"learning\" is frequent because students are talking about their learning or their attitude to learning. However, this would be missing a key pattern in the data. Around one quarter of mentions of the token \"learning\" in this corpus relate to \"machine learning\" or \"deep learning\". Perhaps you've guessed this, especially if you wrote about \"machine learning\", but think of someone analyzing this corpus without that knowledge. With the frequency table alone we cannot make strong claims about the use of \"learning\". \n",
     "\n",
-    "This example illustrates why we should not make assumptions about meaning from frequency tables. To understand how tokens are being used, we need information on that tokens textual context. This is something we pick up on in the next notebook. \n",
+    "This example illustrates why we should not make assumptions about meaning from frequency tables. To understand how tokens are being used, we need information on that token's textual context. This is something we pick up on in the next notebook. \n",
     "\n",
     "Review the tables above. Identify two or three tokens and write a bad assumption about each. You can test them using the concordance notebook later in the lab."
    ]
