--- a/DIGI405 - Lab 1.2 - Concordancing.ipynb
+++ b/DIGI405 - Lab 1.2 - Concordancing.ipynb
@@ -38,6 +38,7 @@
    "source": [
     "from conc.corpus import Corpus\n",
     "from conc.conc import Conc\n",
+    "import shutil\n",
     "import os"
    ]
   },
@@ -69,13 +70,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # if you are running the code on your own machine, adjust the corpus_source_path below to point to the zip with the source files\n",
-    "# # uncomment the remaining lines of this cell to create the corpus from the source files (or load if it already exists)\n",
+    "# if you are running the code on your own machine, adjust the corpus_source_path below to point to the zip with the source files\n",
+    "# uncomment the remaining lines of this cell to create the corpus from the source files (or load if it already exists)\n",
     "# corpus_source_path = f'{source_path}introduce_yourself_corpus.zip'\n",
     "# try:\n",
     "#     corpus = Corpus().load(f'{save_path}introduce-yourself.corpus')\n",
     "# except FileNotFoundError:\n",
-    "#     corpus = Corpus(name = 'Introduce Yourself', description = 'DIGI405 class introduction corpus').build_from_files(corpus_source_path, f'{save_path}/')"
+    "#     corpus = Corpus(name = 'Introduce Yourself', description = 'The \"Introduce Yourself\" corpus is based on responses to the Introduce Yourself task from previous semesters of DIGI405. Names have been replaced with NAMEREMOVED.').build_from_files(corpus_source_path, f'{save_path}/')"
    ]
   },
   {
@@ -96,6 +97,26 @@
    "outputs": [],
    "source": [
     "conc = Conc(corpus) #initialize reporting on the corpus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "184d3ab9",
+   "metadata": {},
+   "source": [
+    "If you want to examine the contents of the source data for the Introduce Yourself corpus, uncomment the following cell and run it. This will copy it into your current working directory. You can download it to your local computer by right clicking on the file in file viewer and clicking 'Download'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffec135b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# source_file = '/srv/source-data/introduce_yourself_corpus.zip' # path to the file containing the Introduce Yourself texts\n",
+    "# destination = os.path.join(os.getcwd(), os.path.basename(source_file))\n",
+    "# shutil.copy(source_file, destination)"
    ]
   },
   {
@@ -154,8 +175,8 @@
    "id": "ad1a7d71",
    "metadata": {},
    "source": [
-    "Notice that the at the bottom of the concordance it shows that there are three pages of results. You can see more concordance lines \n",
-    "by changing the `page_current` to 2 or 3, or by changing the `page_size` to a number larger than the total concordance lines. Change `page_size` now to see all the results."
+    "Notice that the at the bottom of the concordance it shows that there are 11 pages of results. You can see more concordance lines \n",
+    "by changing the `page_current`, or by changing the `page_size` to a number larger than the total concordance lines. Change `page_size` to 50 now to see more concordance lines. Use `page_size` to view page through the results."
    ]
   },
   {
@@ -272,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "document_id = 15\n",
+    "document_id = 52\n",
     "corpus.text(document_id).display(textwrap_width=80) # if the text is doesn't have line breaks, you can format with textwrap_width"
    ]
   },
@@ -291,7 +312,7 @@
    "id": "906eb8f7",
    "metadata": {},
    "source": [
-    "Think about some different linguistic features of your introduction. These could be specific content words related to your skills or interests (e.g. ‘Python’ or ‘punk’) or they might be phrases related to your introduction (e.g. ‘I grew up in’). Search for some of these using the new cell you created and see if you can find some connections to others in the class who used the same words or phrases. "
+    "Think about some different linguistic features of your introduction. These could be specific content words related to your skills or interests (e.g. ‘Python’ or ‘punk’) or they might be phrases related to your introduction (e.g. ‘I grew up in’). Search for some of these using the new cell you created and see if you can find some connections to others who used the same words or phrases. "
    ]
   },
   {
