adding cell to allow download of source data

--- a/DIGI405 - Lab 2.2 - Ngrams.ipynb
+++ b/DIGI405 - Lab 2.2 - Ngrams.ipynb
@@ -46,6 +46,7 @@
    "source": [
     "from conc.corpus import Corpus\n",
     "from conc.conc import Conc\n",
+    "import shutil\n",
     "import os"
    ]
   },
@@ -79,7 +80,7 @@
    "source": [
     "# # if you are running the code on your own machine, unzip the source files - adjust the corpus_source_path below to point to the directory with the source files\n",
     "# # uncomment the remaining lines of this cell to create the corpus from the source files (or load if it already exists)\n",
-    "# corpus_source_path = f'{source_path}qs-v2'\n",
+    "# corpus_source_path = f'{source_path}quake-stories-v2.zip'\n",
     "# try:\n",
     "#     corpus = Corpus().load(f'{save_path}quake-stories-v2.corpus')\n",
     "# except FileNotFoundError:\n",
@@ -104,6 +105,26 @@
    "outputs": [],
    "source": [
     "conc = Conc(corpus) #initialize Conc reporting with the corpus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92277cc0",
+   "metadata": {},
+   "source": [
+    "If you want to examine the contents of the source data for the Quake Stories v2 corpus, uncomment the following cell and run it. This will copy it into your current working directory. You can download it to your local computer by right clicking on the file in file viewer and clicking 'Download'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ae47b92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# source_file = '/srv/source-data/quake-stories-v2.zip' # path to the file \n",
+    "# destination = os.path.join(os.getcwd(), os.path.basename(source_file))\n",
+    "# shutil.copy(source_file, destination)"
    ]
   },
   {
