--- a/DIGI405 - Lab 1.1 - Frequency.ipynb
+++ b/DIGI405 - Lab 1.1 - Frequency.ipynb
@@ -26,7 +26,7 @@
     "texts, and to analyse tokens or phrases in context, using concordance analysis. We will take\n",
     "some time to explore the “Introduce yourself” corpus and learn about your classmates.\n",
     "\n",
-    "To get started, download the ‘Introduce Yourself’ corpus from Learn and upload it."
+    "To get started, run the first few cells to load the corpus."
    ]
   },
   {
