correct the valid order values

--- a/DIGI405 - Lab 2.1 - Collocations.ipynb
+++ b/DIGI405 - Lab 2.1 - Collocations.ipynb
@@ -314,7 +314,7 @@
     "\n",
     "Try this now.\n",
     "\n",
-    "Note: Valid values in Conc currently are `collocate_frequency`, `frequency`, or `frequency`. If the `order` parameter is ommitted or set to `None` the results are based on the effect size measure. If you set the value to `None` it shouldn't have quotes around it. "
+    "Note: Valid values in Conc currently are `collocate_frequency`, `frequency`, or `log_likelihood`. If the `order` parameter is ommitted or set to `None` the results are based on the effect size measure. If you set the value to `None` it shouldn't have quotes around it. "
    ]
   },
   {
