use clearer wording given sections/tasks

--- a/DIGI405 - Lab 2.3 - Keywords.ipynb
+++ b/DIGI405 - Lab 2.3 - Keywords.ipynb
@@ -502,7 +502,7 @@
    "id": "1c1b9fee",
    "metadata": {},
    "source": [
-    "## Task 4: Wrap up"
+    "## Final Task: Wrap up"
    ]
   },
   {
