revising imports to include import for get_nltk_corpus_sources

--- a/DIGI405 - Lab 1.1 - Frequency.ipynb
+++ b/DIGI405 - Lab 1.1 - Frequency.ipynb
@@ -39,6 +39,7 @@
     "from conc.corpus import Corpus\n",
     "from conc.conc import Conc\n",
     "from conc.core import get_stop_words\n",
+    "from conc.corpora import get_nltk_corpus_sources\n",
     "import shutil\n",
     "import os"
    ]
