clarifying wording for semesters where corpus is released after this exercise, providing specific guidance on quantitative claims

--- a/DIGI405 - Lab 1.2 - Concordancing.ipynb
+++ b/DIGI405 - Lab 1.2 - Concordancing.ipynb
@@ -256,7 +256,9 @@
     "\n",
     "Concordances provide a way to see connections between texts in a corpus. \n",
     "\n",
-    "Start with your own introduction and what you wrote. I hope you submitted one! Can you find it using a concordance? "
+    "Start with your own introduction and what you wrote. I hope you posted one! Can you find an introduction using the same word choices as you? \n",
+    "\n",
+    "Note: It is likely you will be working with a corpus with introductions from a previous semester, but we may release an \"Introduce yourself\" corpus for this semester if timing allows it early in the course.  "
    ]
   },
   {
@@ -322,7 +324,7 @@
    "source": [
     "## Task 4: Where is the data?\n",
     "\n",
-    "Concordances are sometimes misunderstood as a qualitative research tool. Yes, they allow you to examine the usage of words and examine the contents of your corpus, but they also provide quantitative evidence for language patterns. While they make it easy to spot one-off interesting or unusual examples of language use, when analysing a concordance we are primarily interested in finding linguistic patterns that occur multiple times and appear in multiple texts in the corpus.\n",
+    "Concordances are sometimes misunderstood as a qualitative research tool. Yes, they allow you to examine the usage of words and examine the contents of your corpus, but they also provide quantitative evidence for language patterns. While they make it easy to spot one-off interesting or unusual examples of language use, when analysing a concordance we are primarily interested in finding linguistic patterns that occur multiple times and appear in multiple texts in the corpus. This might involve counting concordance lines that contain specific language patterns.\n",
     "\n",
     "Use the concordance to search for words you might expect to be used in an introduction. Which of these is most frequent? Be specific and record quantitative information. For the frequent words, use concordance plots to identify if they are likely to appear in specific positions within the texts.  Record this in a markdown cell below.\n",
     "\n",
@@ -337,7 +339,7 @@
    "id": "74cb1a78",
    "metadata": {},
    "source": [
-    "Go back to your own introduction. Using concordances, identify a word or phrase that is frequent in the corpus and a word or phrase that is infrequent (i.e. mostly just appears in your document). For the frequent word or phrase, based on your analysis of concordances and concordance plots, what quantitative claims can you make? Be specific."
+    "Go back to your own introduction. Using concordances, identify a word or phrase that is frequent in the corpus and a word or phrase that is infrequent (i.e. mostly just appears in your document). For the frequent word or phrase, based on your analysis of concordances and concordance plots, what quantitative claims can you make? Be specific and include quantitative claims about patterns you observe in context words either side of the node word."
    ]
   },
   {
